--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.28.0",
     "next": "^12.1.6",
+    "next-sanity": "^0.5.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
