--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@portabletext/react": "^1.0.6",
     "date-fns": "^2.28.0",
     "next": "^12.1.6",
     "next-sanity": "^0.5.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.42",
