--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.28.0",
     "next": "^12.1.6",
     "next-sanity": "^0.5.2",
+    "next-sanity-image": "^3.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-syntax-highlighter": "^15.5.0"
