--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@portabletext/react": "^1.0.6",
+    "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "next": "^12.1.6",
     "next-sanity": "^0.5.2",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^17.0.42",
     "@types/react": "^18.0.12",
+    "@types/react-syntax-highlighter": "^15.5.2",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "autoprefixer": "^10.4.7",
